# dwm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.h  dockerfile  dwm.c
include/: config.h  drw.h  dwm.h  util.h
src/: drw.c  dwm.c  util.c
